大数据的第一个算法

--- a/leetcode/src/main/java/leetcode/docs/每日一题.md
+++ b/leetcode/src/main/java/leetcode/docs/每日一题.md
@@ -15,3 +15,7 @@
     - 滑动窗口的模板题。
     
 5. 考察约瑟夫环
+
+6. [最小基因变化](https://leetcode-cn.com/problems/minimum-genetic-mutation/)
+    - bfs
+    - 预处理(建图)优化
