一些杂七杂八的思考

--- a/leetcode/src/main/java/leetcode/docs/周赛.md
+++ b/leetcode/src/main/java/leetcode/docs/周赛.md
@@ -1,6 +1,25 @@
 # 周赛总结
 
 
+### 4月周赛
+
+
+
+[双周赛3]()
+
+1. 
+
+2.
+
+3. [设计一个ATM机器](https://leetcode-cn.com/problems/design-an-atm-machine/)
+    - 贪心
+    - long long 如果强制转换成int会损失精度
+
+4. [结点序列的最大得分](https://leetcode-cn.com/problems/maximum-score-of-a-node-sequence/)
+    - 图论
+    - 遍历边
+    - 维护每一个边的最大值
+    
 ## 5月周赛
 
 5月1号的单周赛：主考字符串
@@ -32,3 +51,20 @@
 
 
 ****
+
+
+[5月8号的周赛]()
+1. [最大的优质整数]()
+    - 排序
+    - 字符串操作
+    
+2. [统计字符串等于子树平均值的结点数]()
+    - 树的统计结点个数和统计子树和
+
+3. [统计打字方案数目](https://leetcode-cn.com/problems/count-number-of-texts/)
+    - 乘法原理
+    - 上台阶的线性dp模型
+    
+4. [检查是否有合法括号字符串路径](https://leetcode-cn.com/problems/check-if-there-is-a-valid-parentheses-string-path/)
+    - dp,记忆化搜索
+    - 括号的数字表示
