--- a/leetcode/src/main/java/leetcode/docs/每日一题.md
+++ b/leetcode/src/main/java/leetcode/docs/每日一题.md
@@ -19,3 +19,22 @@
 6. [最小基因变化](https://leetcode-cn.com/problems/minimum-genetic-mutation/)
     - bfs
     - 预处理(建图)优化
+
+
+7. [数组中重复的数据](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/)
+    - 原数组进行标记正负 or 使用交换
+    - 改成负数，遇见负数就是已经出现过了。
+    - 需要进行减1处理
+    
+    
+8. [增减字符串匹配](https://leetcode.cn/problems/di-string-match/)
+    - 贪心
+    
+    
+9.[猫鼠游戏](https://leetcode.cn/problems/cat-and-mouse/)
+   - 记忆化搜索
+   - 拓扑排序
+    
+10.[猫鼠游戏2](https://leetcode.cn/problems/cat-and-mouse-ii/)
+   - 拓扑排序
+   - 记忆化搜索(dp)
