--- a/算法总结/基础算法/贪心.md
+++ b/算法总结/基础算法/贪心.md
@@ -2,10 +2,10 @@
 
 
 
-| 题目                                                         | 知识点      | 难度 |
-| ------------------------------------------------------------ | ----------- | ---- |
-| [将数组排序的最少替换次数](https://leetcode.cn/problems/minimum-replacements-to-sort-the-array/solution/tan-xin-by-man-qian-shu-xiao-ming-xs2a/) | 贪心 + 数学 | 困难 |
-| [2193. 得到回文串的最少操作次数](https://leetcode.cn/problems/minimum-number-of-moves-to-make-palindrome/solution/by-man-qian-shu-xiao-ming-824r/) | 贪心 + 分治 | 困难 |
-|                                                              |             |      |
-|                                                              |             |      |
+| 题目                                                         | 知识点           | 难度 |
+| ------------------------------------------------------------ | ---------------- | ---- |
+| [将数组排序的最少替换次数](https://leetcode.cn/problems/minimum-replacements-to-sort-the-array/solution/tan-xin-by-man-qian-shu-xiao-ming-xs2a/) | 贪心 + 数学      | 困难 |
+| [2193. 得到回文串的最少操作次数](https://leetcode.cn/problems/minimum-number-of-moves-to-make-palindrome/solution/by-man-qian-shu-xiao-ming-824r/) | 贪心 + 分治      | 困难 |
+| [1383 最大的团队表现值](https://leetcode.cn/problems/maximum-performance-of-a-team/solution/tan-xin-by-man-qian-shu-xiao-ming-m07j/) | 贪心 -- 二维偏序 | 困难 |
+|                                                              |                  |      |
 
