一段时间跟新

--- a/算法总结/基础算法/滑动窗口.md
+++ b/算法总结/基础算法/滑动窗口.md
@@ -6,7 +6,7 @@
 
 ## 题目
 
-#### [30. 串联所有单词的子串](https://leetcode.cn/problems/substring-with-concatenation-of-all-words/)
+### [30. 串联所有单词的子串](https://leetcode.cn/problems/substring-with-concatenation-of-all-words/)
 
 很经典的滑动窗口题目，困难的地方在于，需要按照单词长度进行分类，然后进行单词长度次滑动窗口。
 
@@ -71,3 +71,8 @@ public:
 };
 ```
 
+
+
+### [75.最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/solution/shuang-zhi-zhen-hash-by-man-qian-shu-xia-tnub/)
+
+双指针 + hash的简单题目
