--- a/算法总结/数学+思维/计数问题.md
+++ b/算法总结/数学+思维/计数问题.md
@@ -6,9 +6,12 @@
 
 
 
-|                             题目                             |      知识       | 难度 |
-| :----------------------------------------------------------: | :-------------: | :--: |
-| [统计坏数对的数目](https://leetcode.cn/problems/count-number-of-bad-pairs/) |    等式移项     | 中等 |
-| [6174. 任务调度器 II](https://leetcode.cn/problems/task-scheduler-ii/) | 区间计数 + hash | 中等 |
-|                                                              |                 |      |
-|                                                              |                 |      |
+|                             题目                             |               知识               | 难度 |
+| :----------------------------------------------------------: | :------------------------------: | :--: |
+| [统计坏数对的数目](https://leetcode.cn/problems/count-number-of-bad-pairs/) |             等式移项             | 中等 |
+| [6174. 任务调度器 II](https://leetcode.cn/problems/task-scheduler-ii/) |         区间计数 + hash          | 中等 |
+| [793. 阶乘函数后K个零](https://leetcode.cn/problems/preimage-size-of-factorial-zeroes-function/solution/shu-xue-ti-mu-by-man-qian-shu-xiao-ming-2cgi/) |  二分 + 连续区间中质因子的个数   | 困难 |
+| [172. 阶乘后零](https://leetcode.cn/problems/factorial-trailing-zeroes/solution/qu-jian-zhong-zhi-yin-zi-de-ge-shu-by-ma-5tk5/) | 连续区间中质因子的个数, 数论计数 | 中等 |
+|                      [233. 数字1的个数]                      |            数位dp问题            | 困难 |
+| [统计子串中的唯一字符](https://leetcode.cn/problems/count-unique-characters-of-all-substrings-of-a-given-string/solution/tong-ji-by-man-qian-shu-xiao-ming-70jt/) |             简单计数             | 困难 |
+|                                                              |                                  |      |
