--- a/算法总结/数据结构/优先队列.md
+++ b/算法总结/数据结构/优先队列.md
@@ -24,3 +24,9 @@
 [1606. 找到处理最多请求的服务器](https://leetcode.cn/problems/find-servers-that-handled-most-number-of-requests/)
 
 [1942. 最小未被占据椅子的编号](https://leetcode.cn/problems/the-number-of-the-smallest-unoccupied-chair/)
+
+[6170. 会议室 III](https://leetcode.cn/problems/meeting-rooms-iii/)
+
+[6143. 预算内的最多机器人数目](https://leetcode.cn/problems/maximum-number-of-robots-within-budget/solution/you-xian-dui-lie-lan-shan-chu-by-man-qia-6vy5/)
+
+注意优先队列默认如果第一维相等的情况下，按照第二维进行排序。所以如果找id最小的，可以不用全部出队，出队一个就行了。否则还需要入队。
