--- a/算法总结/数据结构/树.md
+++ b/算法总结/数据结构/树.md
@@ -14,9 +14,11 @@
 | [后续遍历的非递归实现](https://leetcode.cn/problems/binary-tree-postorder-traversal/solution/bang-ni-dui-er-cha-shu-bu-zai-mi-mang-che-di-chi-t/) |             遍历             | 简单 |
 | [2003. 每棵子树内缺失的最小基因值](https://leetcode.cn/problems/smallest-missing-genetic-value-in-each-subtree/) | 启发式搜索/时间戳/性质 + dfs | 困难 |
 | [2322. 从树中删除边的最小分数](https://leetcode.cn/problems/smallest-missing-genetic-value-in-each-subtree/solution/by-man-qian-shu-xiao-ming-ljk8/) |            时间戳            | 困难 |
-|                                                              |                              |      |
-|                                                              |                              |      |
-|                                                              |                              |      |
+| [655. 输出二叉树](https://leetcode.cn/problems/print-binary-tree/) |          带区间的树          | 中等 |
+| [654. 最大二叉树](https://leetcode.cn/problems/maximum-binary-tree/) |          带区间的树          | 中等 |
+| [105. 从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/) |          带区间的树          | 中等 |
+| [106. 从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/) |          带区间的树          | 中等 |
+| [889. 根据前序和后序遍历构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/) |          带区间的树          | 中等 |
 
 ## 一、树的遍历
 
@@ -218,3 +220,4 @@ void dfs(int u, int fa) {
 
 
 
+## 五、 带区间的树
