--- a/代码/leetcodeJ/src/main/java/leetcode/docs/知识点-题目.md
+++ b/代码/leetcodeJ/src/main/java/leetcode/docs/知识点-题目.md
@@ -43,6 +43,12 @@
    - [题解2](https://leetcode-cn.com/problems/total-appeal-of-a-string/solution/by-endlesscheng-g405/)
    
    
+
+### 换根dp
+- [最小高度树](https://leetcode.cn/problems/minimum-height-trees/submissions/)
+- [统计可能的树根树](https://leetcode.cn/problems/count-number-of-possible-root-nodes/)
+- [树中距离之和](https://leetcode.cn/problems/sum-of-distances-in-tree/submissions/)
+
    
    
 ## 模拟
@@ -76,3 +82,5 @@
 
 - [大量数据的热门词频统计]()
  -[讲解]
+
+
